--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,8 @@
 nodeLinker: node-modules
 
+npmScopes:
+  hugeicons:
+    npmRegistryServer: "https://registry.npmjs.org"
+    npmAuthToken: "${HUGEICONS_PRO_TOKEN}"
+
 yarnPath: .yarn/releases/yarn-3.6.4.cjs
