--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat",
-  "version": "0.0.1",
+  "name": "chatapp",
+  "version": "1.0.0+1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@gorhom/portal": "^1.0.14",
+    "@hugeicons/react-native": "^0.3.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-clipboard/clipboard": "^1.14.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/restyle": "^2.4.4",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-bootsplash": "^6.1.3",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-sse": "^1.2.1",
+    "react-native-svg": "^15.6.0",
+    "react-native-uuid": "^2.0.2",
+    "rn-secure-storage": "^3.0.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,9 +44,11 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
